fix: dark mode colors

--- a/src/styles/cyan-color-theme-vars.sass
+++ b/src/styles/cyan-color-theme-vars.sass
@@ -96,6 +96,7 @@
     --cyan-field-error-color: #bb1187
     --cyan-field-error-background-color: rgba(187, 17, 135, 0.2)
     // Menu
-    --cyan-menu-background-color: var(--chroma-secondary-a)
-    --cyan-menu-item-hover-background-color: var(--chroma-secondary-b)
-
+    --cyan-rise-c-box-shadow: 0px 0px 10px 2px black
+    --cyan-rise-c-background-color: var(--chroma-secondary-b)
+    --cyan-menu-item-hover-background-color: var(--chroma-secondary-c)
+    --cyan-menu-item-text-color: var(--chroma-secondary-i)
